Add replace + batch export to spotify
